--- a/src/components/bootstrap-modal/slides/decisions/styles.css
+++ b/src/components/bootstrap-modal/slides/decisions/styles.css
@@ -12,4 +12,9 @@
     animation: decisions-slide-decisions-current 8s infinite;
     transform: translate3d(-100%, 0, 0);
   }
+
+  .decision-buttons {
+    display: flex;
+    width: 100%;
+  }
 }
